# Session3

./: .gitignore  README.md
Exercice1/: compiling_error.txt  main  main.cpp
Exercice1/1.1/: CMakeLists.txt  input.txt  main.cpp
Exercice1/1.2/: main.cpp
Exercise1/1.1/: Makefile  main.cpp
Exercise1/1.2/: CMakeLists.txt  main.cpp
Exercise2/: CMakeLists.txt  main.cpp
Exercise3/: CMakeLists.txt  main.cpp
Exercise3/simpson/: simpson.cpp
Exercise4/: CMakeLists.txt  libintegrate.h  main.cpp
Exercise4/simpson/: CMakeLists.txt  simpson.cpp  simpson.hpp
Exercise5/: CMakeLists.txt  a.out  main.cpp
Exercise6/: CMakeLists.txt  libintegrate.h  main.cpp  simpson.hpp
Exercise7/: Exercise7.md  Exercise8.md
Exercise8/: CMakeLists.txt  array.hpp  iterator.hpp  main.cpp
Exercise9/: Exercise9.md
